--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -145,3 +145,45 @@ header{
     border-bottom: 2px solid #d35400;
 }
 
+
+/*---------------------------------------------------*/
+/*MEALS*/
+/*---------------------------------------------------*/
+
+
+.section-meals{
+    padding:0;
+}
+.meals-showcase{
+    
+    list-style:none;
+    width:100%;
+    
+    
+}
+
+.meals-showcase li{
+    display:block;
+    float:left;
+    width:25%;
+    height: auto;
+}
+
+.meal-photo{
+    width:100%;
+    overflow: hidden;
+    background-color: #000;
+}
+
+.meal-photo img{
+    opacity:0.65;
+    width:100%;
+    height: auto;
+    transform: scale(1.3);
+    transition:transform 0.5s,opacity 0.5s;
+}
+.meal-photo img:hover{
+    
+    transform:scale(1);
+    opacity:0.95;
+}
