--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -41,7 +41,7 @@ body{
 h1,
 h2,
 h3 {
-    font-weight: 300;
+
     text-transform: uppercase;
 }
 
@@ -125,6 +125,7 @@ header{
     background-image:linear-gradient(rgba(0,0,0,0.3),#000), url(img/hero.jpg);    
     background-size:cover;
     background-position: center;
+    background-attachment: fixed;
     height:100vh;
 }
 
@@ -268,4 +269,34 @@ header{
     width:auto;
     margin-right:30px;
 }
+
+
+/*---------------------------------------------------*/
+/*CITIES*/
+/*---------------------------------------------------*/
+
+.box img{
+   width: 100%;
+   height: auto;
+   margin-bottom: 15px;
+}
+
+.city-feature{
+    margin-bottom:5px;
+}
+
+/* TODO -icons style  and space between sections maybe padding  S5L15???*/
+
+
+/*---------------------------------------------------*/
+/*TESTIMONIALS*/
+/*---------------------------------------------------*/
+
+.section-testimonials{
+background-image:linear-gradient(rgba(0, 0, 0, 0.8),rgba(0, 0, 0, 0.8)),url(img/back-customers.jpg);
+    background-size: cover;
+    color:red;
+    background-attachment: fixed;
+}
+
 
